Add Note Update component

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap-vue": "^2.13.0",
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
+    "dragula": "^3.7.3",
+    "server": "^1.0.30",
     "uuid": "^8.0.0",
     "vue": "^2.6.11"
   },
