--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dragula": "^3.7.3",
     "server": "^1.0.30",
     "uuid": "^8.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
