--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.6.13",
+    "@firebase/storage": "^0.4.2",
     "@teachablemachine/image": "^0.8.4",
     "@tensorflow/tfjs": "^2.7.0",
     "bootstrap": "^4.4.1",
@@ -15,9 +17,11 @@
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
     "dragula": "^3.7.3",
+    "firebase": "^8.0.2",
     "server": "^1.0.30",
     "uuid": "^8.0.0",
     "vue": "^2.6.11",
+    "vue2-circle-progress": "^1.2.3",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
