--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "uuid": "^8.0.0",
     "vue": "^2.6.11",
     "vue-naver-maps": "^0.14.1",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
