--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "server": "^1.0.30",
     "uuid": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-naver-login": "^1.0.4",
     "vue-naver-maps": "^0.14.1",
     "vue-router": "^3.4.9",
     "vue2-circle-progress": "^1.2.3",
