--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-naver-maps": "^0.14.1",
     "vue-router": "^3.4.9",
     "vue2-circle-progress": "^1.2.3",
+    "vuetify": "^2.3.19",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
